SearchEngine/kubernetes-manifests/search-deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: search-deployment
spec:
  replicas: 3 # Pods
  selector:
    matchLabels:
      app: search-deployment
  template:
    metadata:
      labels:
        app: search-deployment
    spec:
      containers:
      - name: search-app
        image: nathanbenedicto/image-search-engine:latest
        ports:
        - containerPort: 8080
