SearchEngine/kubernetes-manifests/search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-service
spec:
  type: LoadBalancer 
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: search-engine-app
