SearchEngine/kubernetes-manifests/search-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: search-app
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: search-app
            port:
              number: 80
